--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+
+body {
+  background-color: #16181D;
+  font-family: 'Asap', sans-serif;
+  color: #fff;
+}
