add section services

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
   --color-muted: #E3646E;
   --color-TextPrimary: #E2E4E9;
   --color-TextSecondary: #878EA1;
+  --color-IconPurple: #BB72E9;
+  --color-IconYellow: #EABD5F;
+  --color-IconGreen: #82BC4F;
   --color-cardBackground: #292C34;
 }
 
