--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 @theme{
   --font-subtitle: 'Inconsolata', monospace;
   --font-Small: 'Maven Pro', sans-serif;
+  --font-primary: 'Asap', sans-serif;
   --color-muted: #E3646E;
   --color-BackgroundPrimary: #16181D;
   --color-TextPrimary: #E2E4E9;
@@ -19,6 +20,6 @@
 
 body {
   background-color: var(--color-BackgroundPrimary);
-  font-family: 'Asap', sans-serif;
+  font-family: var(--font-primary);
   color: var(--color-TextPrimary);
 }
